# blueos-recorder

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml
src/: channel_descriptor.rs  cli.rs  main.rs  mavlink.rs  mcap.rs  service.rs  zenoh_config.rs  zenoh_subscriptions.rs
src/mavlink/: camera.rs  frame.rs  mod.rs  vehicle.rs  worker.rs
src/mavlink/camera/: discoverer.rs  mod.rs  stream.rs
