[package]
name = "zenoh-bmr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
foxglove = "0.9.0"
include_dir = "0.7.4"
log = "0.4.27"
mcap = "0.23.0"
once_cell = "1.19.0"
regex = "1.11.1"
serde_json = "1.0.140"
serde_json5 = "0.2.1"
shellexpand = "3.1.0"
tokio = "1.46.0"
zenoh = { version = "1.4.0", features = ["internal"] }
