[package]
name = "blueos-recorder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
foxglove = "0.25.1"
include_dir = "0.7.4"
mcap = "0.25.0"
mavlink = { version = "0.16.2", default-features = false, features = ["std", "ardupilotmega", "serde", "emit-extensions"] }
once_cell = "1.19.0"
serde_json = "1.0.140"
serde_json5 = "0.2.1"
shellexpand = "3.1.0"
tokio = "1.46.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zenoh = { version = "=1.9.0", features = ["shared-memory"] }
